--- a/sampleapp/package.json
+++ b/sampleapp/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4"
   }
 }
