--- a/sampleapp/package.json
+++ b/sampleapp/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "lodash": "^4.17.21",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "react-error-boundary": "^4.0.10"
   }
 }
